Security fixe + edit request form

--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -124,9 +124,9 @@
                                 Messages                               
                                 </a>
                             </li>
-                            <li class="follows">
+                            {#<li class="follows">
                                 <a href="">Manage follows</a>
-                            </li>                            
+                            </li>#}
                             <li class="divider"></li>
                             <li class="settings">
                                 <a target="_self" href="{{ path('pp_user_setting', {'slug': app.user.slug}) }}">Settings</a>
