--- a/app/Resources/views/overlay.html.twig
+++ b/app/Resources/views/overlay.html.twig
@@ -15,6 +15,22 @@
     </div>
 </section>
 
+<section class="overlay send-request" id="editRequestOver" style="display: none;">  
+    <div class="box-container new-request stopPropagation">
+        <div class="box-content">
+            <div class="box-top">
+                Edit request
+                <button class="button-close" id="editRequestOverClose" >×</button>
+            </div>
+            <div id="editRequestContent">
+                <div class="load-content"  id="loadingGif" >
+                <span class="bubble"></span>
+                </div>
+            </div>            
+        </div>
+    </div>
+</section>
+
 <section class="overlay sign" id="signInUpOver" style="display:none;" >
     <button class="button-close" id="signInUpOverClose" >×</button>
     <div class="overlay-content">
