--- a/src/PP/RequestBundle/Resources/views/Request/editRequestForm.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/editRequestForm.html.twig
@@ -1,19 +1,20 @@
-
-
 {% if  is_granted("ROLE_USER") %}
-    {% if  editRequestForm is defined %}                      
-        <div class="new-demand">            
-            <div class="comp-area">
-                {{ form_start(editRequestForm, {'attr': {'class': 'addRequestForm'}})  }}                                            
-                    {{ form_row(editRequestForm.title) }}
-                    
-                    {{ form_row(editRequestForm.request) }} 
-                    {{ form_row(editRequestForm.category) }} 
-                    {{ form_row(editRequestForm.tagsStr) }} 
-                    {{ form_row(editRequestForm.save) }} 
-                   
-                {{ form_end(editRequestForm) }}
+    {% if  editRequestForm is defined %}                             
+        {{ form_start(editRequestForm, {'attr': {'class': 'addRequestForm'}})  }}   
+        <div class="box-comp">                                         
+            {{form_row(editRequestForm.title)}}
+            {{form_row(editRequestForm.request, {'attr': {'rows': '15'}})}}
+            <div class="col-6">
+                {{form_row(editRequestForm.category)}}
             </div>
-         </div>
+            <div class="col-6">
+                {{form_row(editRequestForm.tagsStr)}} 
+            </div>
+        </div>
+        <div class="box-bottom">
+            {{form_row(editRequestForm.save)}}
+        </div>
+        {{ form_end(editRequestForm) }}
     {% endif %}
 {% endif %}
+
